--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,9 @@ verilate(minesweeper-tt08
     src/graphics.v
     src/xorshift.v
 )
+
+add_executable(bmp2verilog tools/bmp2verilog.cpp)
+target_compile_features(bmp2verilog PRIVATE cxx_std_20)
+if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    target_compile_options(bmp2verilog PRIVATE -Wall -W -Wextra -Wpedantic)
+endif()
