--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ target_link_libraries(minesweeper-tt08 PRIVATE Qt5::Widgets Qt5::OpenGL)
 verilate(minesweeper-tt08
     TOP_MODULE tt_um_minesweeper
     OPT_FAST "-O3 -march=native"
-    VERILATOR_ARGS "-Wall"
+    VERILATOR_ARGS -Wall -I${CMAKE_CURRENT_SOURCE_DIR}/src
     SOURCES
     src/tt_um_minesweeper.v
     src/graphics.v
