--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,10 @@ verilate(tt08-nyan
     src/music.v
 )
 
-add_executable(bmp2verilog tools/bmp2verilog.cpp)
-target_compile_features(bmp2verilog PRIVATE cxx_std_20)
+add_executable(make_bitmaps tools/make_bitmaps.cpp)
+target_compile_features(make_bitmaps PRIVATE cxx_std_20)
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    target_compile_options(bmp2verilog PRIVATE -Wall -W -Wextra -Wpedantic)
+    target_compile_options(make_bitmaps PRIVATE -Wall -W -Wextra -Wpedantic)
 endif()
 
 add_executable(make_music tools/make_music.cpp)
