--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ pdk
 runs
 src/config_merged.json
 src/user_config.json
+test/sim_build
+test/__pycache__/
+test/results.xml
+test/gate_level_netlist.v
+*.vcd
